Background no longer leaves white space, temp. fix

--- a/Application/src/components/Background/Background.module.css
+++ b/Application/src/components/Background/Background.module.css
@@ -1,6 +1,6 @@
 .Bg {
-    background: url(../../assets/images/Background-gradient.png) no-repeat;
+    background: url(../../assets/images/Background-gradient.png);
     height: 100%;
     width: 100%;
-    position: absolute;
+    position: fixed;
 }
